--- a/SweetTreatz/pom.xml
+++ b/SweetTreatz/pom.xml
@@ -11,10 +11,10 @@
 	<groupId>com.example</groupId>
 	<artifactId>SimplestCRUDExample</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>SimplestCRUDExample</name>
-	<description>Demo project for Spring Boot</description>
+	<name>SweetTreatz</name>
+	<description>BMW Project</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
